thirdparty/glad/gles2/gles2.v

	invalid_framebuffer_operation = C.GL_INVALID_FRAMEBUFFER_OPERATION
}

fn C.glad_glActiveTexture(texture ESFlag)

pub fn active_texture(texture ESFlag) {
	C.glad_glActiveTexture(texture)
}

fn C.glad_glAttachShader(program GLuint, shader GLuint)

pub fn attach_shader(program GLuint, shader GLuint) {
	C.glad_glAttachShader(program, shader)
}

fn C.glad_glBindAttribLocation(program GLuint, index GLuint, name &GLchar)

pub fn bind_attrib_location(program GLuint, index GLuint, name &GLchar) {
	C.glad_glBindAttribLocation(program, index, name)
}

fn C.glad_glBindBuffer(target ESFlag, buffer GLuint)

pub fn bind_buffer(target ESFlag, buffer GLuint) {
	C.glad_glBindBuffer(target, buffer)
}

fn C.glad_glBindFramebuffer(target ESFlag, framebuffer GLuint)

pub fn bind_framebuffer(target ESFlag, framebuffer GLuint) {
	C.glad_glBindFramebuffer(target, framebuffer)
}

fn C.glad_glBindRenderbuffer(target ESFlag, renderbuffer GLuint)

pub fn bind_renderbuffer(target ESFlag, renderbuffer GLuint) {
	C.glad_glBindRenderbuffer(target, renderbuffer)
}

fn C.glad_glBindTexture(target ESFlag, texture GLuint)

pub fn bind_texture(target ESFlag, texture GLuint) {
	C.glad_glBindTexture(target, texture)
}

fn C.glad_glBlendColor(red GLfloat, green GLfloat, blue GLfloat, alpha GLfloat)

pub fn blend_color(red GLfloat, green GLfloat, blue GLfloat, alpha GLfloat) {
	C.glad_glBlendColor(red, green, blue, alpha)
}

fn C.glad_glBlendEquation(mode ESFlag)

pub fn blend_equation(mode ESFlag) {
	C.glad_glBlendEquation(mode)
}

fn C.glad_glBlendEquationSeparate(modergb ESFlag, modealpha ESFlag)

pub fn blend_equation_separate(modergb ESFlag, modealpha ESFlag) {
	C.glad_glBlendEquationSeparate(modergb, modealpha)
}

fn C.glad_glBlendFunc(sfactor ESFlag, dfactor ESFlag)

pub fn blend_func(sfactor ESFlag, dfactor ESFlag) {
	C.glad_glBlendFunc(sfactor, dfactor)
}

fn C.glad_glBlendFuncSeparate(sfactorrgb ESFlag, dfactorrgb ESFlag, sfactoralpha ESFlag, dfactoralpha ESFlag)

pub fn blend_func_separate(sfactorrgb ESFlag, dfactorrgb ESFlag, sfactoralpha ESFlag, dfactoralpha ESFlag) {
	C.glad_glBlendFuncSeparate(sfactorrgb, dfactorrgb, sfactoralpha, dfactoralpha)
}

fn C.glad_glBufferData(target ESFlag, size GLsizeiptr, data voidptr, usage ESFlag)

pub fn buffer_data(target ESFlag, size GLsizeiptr, data voidptr, usage ESFlag) {
	C.glad_glBufferData(target, size, data, usage)
}

fn C.glad_glBufferSubData(target ESFlag, offset GLintptr, size GLsizeiptr, data voidptr)

pub fn buffer_subdata(target ESFlag, offset GLintptr, size GLsizeiptr, data voidptr) {
	C.glad_glBufferSubData(target, offset, size, data)
}

fn C.glad_glCheckFramebufferStatus(target ESFlag) ESFlag

pub fn check_framebuffer_status(target ESFlag) ESFlag {
	return C.glad_glCheckFramebufferStatus(target)
}

fn C.glad_glClear(mask GLbitfield)

pub fn clear(mask GLbitfield) {
	C.glad_glClear(mask)
}

fn C.glad_glClearColor(red GLfloat, green GLfloat, blue GLfloat, alpha GLfloat)

pub fn clear_color(red GLfloat, green GLfloat, blue GLfloat, alpha GLfloat) {
	C.glad_glClearColor(red, green, blue, alpha)
}

fn C.glad_glClearDepthf(d GLfloat)

pub fn clear_depthf(d GLfloat) {
	C.glad_glClearDepthf(d)
}

fn C.glad_glClearStencil(s GLint)

pub fn clear_stencil(s GLint) {
	C.glad_glClearStencil(s)
}

fn C.glad_glColorMask(red GLboolean, green GLboolean, blue GLboolean, alpha GLboolean)

pub fn color_mask(red GLboolean, green GLboolean, blue GLboolean, alpha GLboolean) {
	C.glad_glColorMask(red, green, blue, alpha)
}

fn C.glad_glCompileShader(shader GLuint)

pub fn compile_shader(shader GLuint) {
	C.glad_glCompileShader(shader)
}

fn C.glad_glCompressedTexImage2D(target ESFlag, level GLint, internalformat ESFlag, width GLsizei, height GLsizei, border GLint, imagesize GLsizei, data voidptr)

pub fn compressed_teximage2d(target ESFlag, level GLint, internalformat ESFlag, width GLsizei, height GLsizei, border GLint, imagesize GLsizei, data voidptr) {
	C.glad_glCompressedTexImage2D(target, level, internalformat, width, height, border,
		imagesize, data)
}

fn C.glad_glCompressedTexSubImage2D(target ESFlag, level GLint, xoffset GLint, yoffset GLint, width GLsizei, height GLsizei, format ESFlag, imagesize GLsizei, data voidptr)

pub fn compressed_texsubimage2d(target ESFlag, level GLint, xoffset GLint, yoffset GLint, width GLsizei, height GLsizei, format ESFlag, imagesize GLsizei, data voidptr) {
	C.glad_glCompressedTexSubImage2D(target, level, xoffset, yoffset, width, height, format,
		imagesize, data)
}

fn C.glad_glCopyTexImage2D(target ESFlag, level GLint, internalformat ESFlag, x GLint, y GLint, width GLsizei, height GLsizei, border GLint)

pub fn copy_teximage2d(target ESFlag, level GLint, internalformat ESFlag, x GLint, y GLint, width GLsizei, height GLsizei, border GLint) {
	C.glad_glCopyTexImage2D(target, level, internalformat, x, y, width, height, border)
}

fn C.glad_glCopyTexSubImage2D(target ESFlag, level GLint, xoffset GLint, yoffset GLint, x GLint, y GLint, width GLsizei, height GLsizei)

pub fn copy_texsubimage2d(target ESFlag, level GLint, xoffset GLint, yoffset GLint, x GLint, y GLint, width GLsizei, height GLsizei) {
	C.glad_glCopyTexSubImage2D(target, level, xoffset, yoffset, x, y, width, height)
}

fn C.glad_glCreateProgram() GLuint

pub fn create_program() GLuint {
	return C.glad_glCreateProgram()
}

fn C.glad_glCreateShader(type_ ESFlag) GLuint

pub fn create_shader(type_ ESFlag) GLuint {
	return C.glad_glCreateShader(type_)
}

fn C.glad_glCullFace(mode ESFlag)

pub fn cull_face(mode ESFlag) {
	C.glad_glCullFace(mode)
}

fn C.glad_glDeleteBuffers(n GLsizei, buffers &GLuint)

pub fn delete_buffers(n GLsizei, buffers &GLuint) {
	C.glad_glDeleteBuffers(n, buffers)
}

fn C.glad_glDeleteFramebuffers(n GLsizei, framebuffers &GLuint)

pub fn delete_framebuffers(n GLsizei, framebuffers &GLuint) {
	C.glad_glDeleteFramebuffers(n, framebuffers)
}

fn C.glad_glDeleteProgram(program GLuint)

pub fn delete_program(program GLuint) {
	C.glad_glDeleteProgram(program)
}

fn C.glad_glDeleteRenderbuffers(n GLsizei, renderbuffers &GLuint)

pub fn delete_render_buffers(n GLsizei, renderbuffers &GLuint) {
	C.glad_glDeleteRenderbuffers(n, renderbuffers)
}

fn C.glad_glDeleteShader(shader GLuint)

pub fn delete_shader(shader GLuint) {
	C.glad_glDeleteShader(shader)
}

fn C.glad_glDeleteTextures(n GLsizei, textures &GLuint)

pub fn delete_textures(n GLsizei, textures &GLuint) {
	C.glad_glDeleteTextures(n, textures)
}

fn C.glad_glDepthFunc(func ESFlag)

pub fn depth_func(func ESFlag) {
	C.glad_glDepthFunc(func)
}

fn C.glad_glDepthMask(ESFlag GLboolean)

pub fn depth_mask(flag GLboolean) {
	C.glad_glDepthMask(flag)
}

fn C.glad_glDepthRangef(n GLfloat, f GLfloat)

pub fn depth_rangef(n GLfloat, f GLfloat) {
	C.glad_glDepthRangef(n, f)
}

fn C.glad_glDetachShader(program GLuint, shader GLuint)

pub fn detach_shader(program GLuint, shader GLuint) {
	C.glad_glDetachShader(program, shader)
}

fn C.glad_glDisable(cap ESFlag)

pub fn disable(cap ESFlag) {
	C.glad_glDisable(cap)
}

fn C.glad_glDisableVertexAttribArray(index GLuint)

pub fn disable_vertex_attrib_array(index GLuint) {
	C.glad_glDisableVertexAttribArray(index)
}

fn C.glad_glDrawArrays(mode ESFlag, first GLint, count GLsizei)

pub fn draw_arrays(mode ESFlag, first GLint, count GLsizei) {
	C.glad_glDrawArrays(mode, first, count)
}

fn C.glad_glDrawElements(mode ESFlag, count GLsizei, type_ ESFlag, indices voidptr)

pub fn draw_elements(mode ESFlag, count GLsizei, type_ ESFlag, indices voidptr) {
	C.glad_glDrawElements(mode, count, type_, indices)
}

fn C.glad_glEnable(cap ESFlag)

pub fn enable(cap ESFlag) {
	C.glad_glEnable(cap)
}

fn C.glad_glEnableVertexAttribArray(index GLuint)

pub fn enable_vertex_attrib_array(index GLuint) {
	C.glad_glEnableVertexAttribArray(index)
}

fn C.glad_glFinish()

pub fn finish() {
	C.glad_glFinish()
}

fn C.glad_glFlush()

pub fn flush() {
	C.glad_glFlush()
}

fn C.glad_glFramebufferRenderbuffer(target ESFlag, attachment ESFlag, renderbuffertarget ESFlag, renderbuffer GLuint)

pub fn framebuffer_renderbuffer(target ESFlag, attachment ESFlag, renderbuffertarget ESFlag, renderbuffer GLuint) {
	C.glad_glFramebufferRenderbuffer(target, attachment, renderbuffertarget, renderbuffer)
}

fn C.glad_glFramebufferTexture2D(target ESFlag, attachment ESFlag, textarget ESFlag, texture GLuint, level GLint)

pub fn framebuffer_texture2d(target ESFlag, attachment ESFlag, textarget ESFlag, texture GLuint, level GLint) {
	C.glad_glFramebufferTexture2D(target, attachment, textarget, texture, level)
}

fn C.glad_glFrontFace(mode ESFlag)

pub fn front_face(mode ESFlag) {
	C.glad_glFrontFace(mode)
}

fn C.glad_glGenBuffers(n GLsizei, buffers &GLuint)

pub fn gen_buffers(n GLsizei, buffers &GLuint) {
	C.glad_glGenBuffers(n, buffers)
}

fn C.glad_glGenerateMipmap(target ESFlag)

pub fn generate_mipmap(target ESFlag) {
	C.glad_glGenerateMipmap(target)
}

fn C.glad_glGenFramebuffers(n GLsizei, framebuffers &GLuint)

pub fn gen_framebuffers(n GLsizei, framebuffers &GLuint) {
	C.glad_glGenFramebuffers(n, framebuffers)
}

fn C.glad_glGenRenderbuffers(n GLsizei, renderbuffers &GLuint)

pub fn gen_renderbuffers(n GLsizei, renderbuffers &GLuint) {
	C.glad_glGenRenderbuffers(n, renderbuffers)
}

fn C.glad_glGenTextures(n GLsizei, textures &GLuint)

pub fn gen_textures(n GLsizei, textures &GLuint) {
	C.glad_glGenTextures(n, textures)
}

fn C.glad_glGetActiveAttrib(program GLuint, index GLuint, bufsize GLsizei, length &GLsizei, size &GLint, type_ &ESFlag, name &GLchar)

pub fn get_active_attrib(program GLuint, index GLuint, bufsize GLsizei, length &GLsizei, size &GLint, type_ &ESFlag, name &GLchar) {
	C.glad_glGetActiveAttrib(program, index, bufsize, length, size, type_, name)
}

fn C.glad_glGetActiveUniform(program GLuint, index GLuint, bufsize GLsizei, length &GLsizei, size &GLint, type_ &ESFlag, name &GLchar)

pub fn get_active_uniform(program GLuint, index GLuint, bufsize GLsizei, length &GLsizei, size &GLint, type_ &ESFlag, name &GLchar) {
	C.glad_glGetActiveUniform(program, index, bufsize, length, size, type_, name)
}

fn C.glad_glGetAttachedShaders(program GLuint, maxcount GLsizei, count &GLsizei, shaders &GLuint)

pub fn get_attached_shaders(program GLuint, maxcount GLsizei, count &GLsizei, shaders &GLuint) {
	C.glad_glGetAttachedShaders(program, maxcount, count, shaders)
}

fn C.glad_glGetAttribLocation(program GLuint, name &GLchar) GLint

pub fn get_attrib_location(program GLuint, name &GLchar) GLint {
	return C.glad_glGetAttribLocation(program, name)
}

fn C.glad_glGetBooleanv(pname ESFlag, data &GLboolean)

pub fn get_booleanv(pname ESFlag, data &GLboolean) {
	C.glad_glGetBooleanv(pname, data)
}

fn C.glad_glGetBufferParameteriv(target ESFlag, pname ESFlag, params &GLint)

pub fn get_buffer_parameteriv(target ESFlag, pname ESFlag, params &GLint) {
	C.glad_glGetBufferParameteriv(target, pname, params)
}

fn C.glad_glGetError() ESFlag

pub fn get_error() ESFlag {
	return C.glad_glGetError()
}

fn C.glad_glGetFloatv(pname ESFlag, data &GLfloat)

pub fn get_floatv(pname ESFlag, data &GLfloat) {
	C.glad_glGetFloatv(pname, data)
}

fn C.glad_glGetFramebufferAttachmentParameteriv(target ESFlag, attachment ESFlag, pname ESFlag, params &GLint)

pub fn get_framebuffer_attachment_parameteriv(target ESFlag, attachment ESFlag, pname ESFlag, params &GLint) {
	C.glad_glGetFramebufferAttachmentParameteriv(target, attachment, pname, params)
}

fn C.glad_glGetIntegerv(pname ESFlag, data &GLint)

pub fn get_integerv(pname ESFlag, data &GLint) {
	C.glad_glGetIntegerv(pname, data)
}

fn C.glad_glGetProgramiv(program GLuint, pname ESFlag, params &GLint)

pub fn get_programiv(program GLuint, pname ESFlag, params &GLint) {
	C.glad_glGetProgramiv(program, pname, params)
}

fn C.glad_glGetProgramInfoLog(program GLuint, bufsize GLsizei, length &GLsizei, infolog &GLchar)

pub fn get_program_info_log(program GLuint, bufsize GLsizei, length &GLsizei, infolog &GLchar) {
	C.glad_glGetProgramInfoLog(program, bufsize, length, infolog)
}
